# rhythmiq-backend

./: .gitignore  README.md  dump_fixtures.py  load_fixtures.py  manage.py  pyproject.toml
app_rhythmiq/: admin.py  apps.py
app_rhythmiq/fixtures/: auth_user.json  downloaded_song.json  genre.json  like.json  playlist.json  song.json  user_profile.json
app_rhythmiq/migrations/: 0001_initial.py  0002_alter_song_cover_image_path_alter_song_mp3_path.py  0002_alter_song_name_alter_userprofile_showed_name.py  0003_userprofile_account_type_and_more.py  0004_alter_downloadedsong_unique_together.py  0005_song_genres.py  0006_rename_mp3_path_song_song_path.py  0007_alter_song_duration.py  0008_alter_userprofile_profile_picture_path.py
app_rhythmiq/models/: __init__.py  downloaded_song.py  genre.py  like.py  playlist.py  song.py  user_profile.py
app_rhythmiq/serializers/: __init__.py  downloaded_song.py  genre.py  genry.py  like.py  playlist.py  song.py  user_profile.py
app_rhythmiq/views/: __init__.py  auth.py  downloaded_song.py  genre.py  like.py  login.py  permissions.py  playlist.py  song.py  swagger.py  user_profile.py
rhythmiq/: asgi.py  settings.py  urls.py  wsgi.py
